Reformat and update html structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Leekspin (html5)</title>
   <script src="data.js"></script>
   <script src="leekspins.js"></script>
+</head>
+
 <body>
+  <noscript>
+    leekspins requires javascript to run, please enable it.
+  </noscript>
+  <footer>Hosted with
+    <span class="redheart">&hearts;</span> on
+    <a href="https://surge.sh/">Surge</a>
+  </footer>
+</body>
 
-<!-- https://github.com/xhroot/leekspins -->
-
+</html>
